k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-web-app
spec:
  type: NodePort
  selector:
    app: simple-web-app
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
